@@ -110,14 +110,14 @@ test_pmk: pmk
 	@echo ""
 	@echo "-> Dumping generated files"
 	@echo ""
-	@echo "samples/Makefile.sample"
+	@echo "Makefile.sample"
 	@echo "----------------------------------------"
-	@cat samples/Makefile.sample
+	@cat Makefile.sample
 	@echo "----------------------------------------"
 	@echo ""
-	@echo "samples/config_sample.h"
+	@echo "config_sample.h"
 	@echo "----------------------------------------"
-	@cat samples/config_sample.h
+	@cat config_sample.h
 	@echo "----------------------------------------"
 	@echo ""
 	@echo "samples/ac_config.h"
@@ -142,7 +142,7 @@ test_pmksetup: pmksetup
 test_clean:
 	@echo ""
 	@echo "=> Removing generated files"
-	rm -f samples/Makefile.sample samples/config_sample.h samples/ac_config.h pmk.log pmk.conf
+	rm -f Makefile.sample config_sample.h samples/ac_config.h pmk.log pmk.conf
 	@echo ""
 	@echo "=> End of cleaning."
 	@echo ""
